# hasher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/data/: enums.rs
src/tasks/: hash.rs  user_action.rs
src/utils/: helper.rs
