[package]
name = "hasher"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.39", features = ["derive", "unicode"] }
glob = "0.3.2"
hex = "0.4.3"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.11.1"
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
