[package]
name = "hasher"
authors = ["Elypha <i@elypha.com>"]
homepage = "https://github.com/Elypha/hasher"
license = "GPL-3.0-or-later"
version = "0.1.1"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.39", features = ["derive", "unicode", "wrap_help"] }
glob = "0.3.2"
hex = "0.4.3"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.11.1"
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }

[profile.release]
strip = "symbols"
